Text - fix vlna

--- a/text/xharmi00-bibliography.bib
+++ b/text/xharmi00-bibliography.bib
@@ -316,7 +316,7 @@
 @INPROCEEDINGS{controlFlowAnalysisAllen,
     author = {Allen, Frances E.},
     title = {Control Flow Analysis},
-    booktitle = {Proceedings of a Symposium on Compiler Optimization},
+    booktitle = {Proceedings of a~Symposium on Compiler Optimization},
     year = {1970},
     pages = {1\,--\,19},
     doi = {10.1145/800028.808479},
